# danilo_naves_embarcatech_HBr_2025

./: README.md
exercises/ADC_reader_with_interrupts/: ADC_reader_with_interrupts.c  CMakeLists.txt
exercises/interrupts_button/: CMakeLists.txt  interrupts_button.c
exercises/modular_architecture./: CMakeLists.txt
exercises/modular_architecture./app/: main.c
exercises/modular_architecture./drivers/: led_embutido.c
exercises/modular_architecture./hal/: hal_led.c
exercises/modular_architecture./include/: hal_led.h  led_embutido.h
exercises/reader_analog_stick/: CMakeLists.txt  reader_analog_stick.c
exercises/unit_test/: CMakeLists.txt  README.md
exercises/unit_test/include/: temp_sensor.h
exercises/unit_test/src/: main.c  temp_sensor.c
exercises/unit_test/test/: CMakeLists.txt  test_temp_sensor.c
tracker_habitos/: README.md
tracker_habitos/backend/: .env.dev  .gitignore  Dockerfile  Makefile  docker-compose.yml  habitos-db.sql  package-lock.json  package.json
tracker_habitos/backend/src/: app.js  server.js
tracker_habitos/backend/src/config/: db.js
tracker_habitos/backend/src/controllers/: habitoController.js
tracker_habitos/backend/src/models/: habitoModel.js
tracker_habitos/backend/src/routes/: habitoRoutes.js
tracker_habitos/backend/src/services/: habitoService.js
tracker_habitos/frontend/: pubspec.yaml
tracker_habitos/frontend/lib/: main.dart
tracker_habitos/frontend/lib/model/: habitos_model.dart
tracker_habitos/hardware/: CMakeLists.txt  gestao-habitos.c  lwipopts.h  ttt.c
(+4 files in other folders)
